[tool.poetry]
name = "mlproject"
version = "0.1.0"
description = ""
authors = ["mariosajdini <t8200003@aueb.gr>"]

[tool.poetry.dependencies]
python = "^3.11"
chromadb = "*"
langchain-openai = "*"
pandas = "*"
numpy = "^*"
json = "*"
scikit-learn = "*"
tensorflow = "*"
seaborn = "*"
matplotlib = "^*"
yellowbrick = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
